# otus_pypro_log-analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  default-config.json  pyproject.toml
app_logs/: README.md
reports/: README.md
src/: log_analyzer.py
tests/: test_log_analyzer.py
